chore(): change app name

--- a/ios/HealthyRecipes/Info.plist
+++ b/ios/HealthyRecipes/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>HealthyRecipes</string>
+	<string>Newsy</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
